--- a/index.css
+++ b/index.css
@@ -53,3 +53,30 @@ button {
     height: 20px;
     margin: 40px 0 0 0;
 }
+
+.offline {
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 2;
+}
+
+.notification {
+    background:#333;
+    padding: 20px;
+    width: 250px;
+    bottom: 20px;
+    right: 20px;
+    position: absolute;
+    color: #fff;
+    z-index: 3;
+    cursor: pointer;
+    border-left: 5px solid #f44336;
+    box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2), 0px 2px 2px 0px rgba(0,0,0,0.14), 0px 1px 5px 0px rgba(0,0,0,0.12);
+}
